@@ -1,29 +1,35 @@
-import org.apache.tools.ant.filters.ReplaceTokens
-import org.gradle.internal.os.OperatingSystem
-
 plugins {
     id("org.jabref.gradle.module")
     id("application")
 
     // Do not activate; causes issues with the modularity plugin (no tests found etc)
     // id("com.redock.classpathtofile") version "0.1.0"
-
-    id("org.beryx.jlink") version "3.1.1"
 }
 
 group = "org.jabref"
 version = project.findProperty("projVersion") ?: "100.0.0"
 
+// See https://javadoc.io/doc/org.mockito/mockito-core/latest/org.mockito/org/mockito/Mockito.html#0.3
+val mockitoAgent = configurations.create("mockitoAgent")
+
 dependencies {
     implementation(project(":jablib"))
-
-    implementation("org.openjfx:javafx-base")
-    implementation("org.openjfx:javafx-controls")
-    implementation("org.openjfx:javafx-fxml")
+    // Following already provided by jablib
+    // implementation("org.openjfx:javafx-base")
+    // implementation("org.openjfx:javafx-controls")
+    // implementation("org.openjfx:javafx-fxml")
     // implementation("org.openjfx:javafx-graphics")
-    implementation("org.openjfx:javafx-graphics")
+
+    implementation(project(":jabls"))
+    implementation(project(":jabsrv"))
+
     implementation("org.openjfx:javafx-swing")
     implementation("org.openjfx:javafx-web")
+
+    implementation("com.pixelduke:fxthemes")
+
+    // From JavaFX25 onwards
+    implementation("org.openjfx:jdk-jsobject")
 
     implementation("org.slf4j:slf4j-api")
     implementation("org.tinylog:tinylog-api")
@@ -75,7 +81,7 @@ dependencies {
 
     implementation ("org.apache.pdfbox:pdfbox")
 
-    // implementation("net.java.dev.jna:jna")
+    implementation("net.java.dev.jna:jna-jpms")
     implementation("net.java.dev.jna:jna-platform")
 
     implementation("org.eclipse.jgit:org.eclipse.jgit")
@@ -105,347 +111,137 @@ dependencies {
     testImplementation("org.testfx:testfx-junit5")
 
     testImplementation("org.mockito:mockito-core")
+    mockitoAgent("org.mockito:mockito-core:5.18.0") { isTransitive = false }
     testImplementation("net.bytebuddy:byte-buddy")
 
-    testImplementation("org.wiremock:wiremock")
+    testImplementation("org.hamcrest:hamcrest")
+
+    testImplementation("org.wiremock:wiremock") {
+        exclude(group = "net.sf.jopt-simple", module = "jopt-simple")
+    }
 
     testImplementation("com.github.javaparser:javaparser-symbol-solver-core")
+    testImplementation("org.ow2.asm:asm")
+
+    testImplementation("com.tngtech.archunit:archunit")
+    testImplementation("com.tngtech.archunit:archunit-junit5-api")
+    testRuntimeOnly("com.tngtech.archunit:archunit-junit5-engine")
 }
 
 application {
     mainClass.set("org.jabref.Launcher")
     mainModule.set("org.jabref")
 
-    applicationDefaultJvmArgs = listOf(
-        // On a change here, also adapt
-        //   1. "run > moduleOptions"
-        //   2. "binaries.yml" (macOS part)
+    application.applicationDefaultJvmArgs = listOf(
+        "--enable-native-access=ai.djl.tokenizers,ai.djl.pytorch_engine,com.sun.jna,javafx.graphics,javafx.media,javafx.web,org.apache.lucene.core",
+        "--add-opens", "java.base/java.nio=org.apache.pdfbox.io",
+        // https://github.com/uncomplicate/neanderthal/issues/55
+        "--add-opens", "java.base/jdk.internal.ref=org.apache.pdfbox.io",
+        "--add-modules", "jdk.incubator.vector",
 
-        // Note that the arguments are cleared for the "run" task to avoid messages like "WARNING: Unknown module: org.jabref.merged.module specified to --add-exports"
-
-        // Enable JEP 450: Compact Object Headers
-        "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCompactObjectHeaders",
-
-        "-XX:+UseZGC", "-XX:+ZUncommit",
-        "-XX:+UseStringDeduplication",
-
-        // Fix for https://github.com/JabRef/jabref/issues/11225 on linux
-        "--add-opens=javafx.controls/javafx.scene.control=org.jabref",
-        "--add-exports=javafx.base/com.sun.javafx.event=org.jabref",
-        "--add-exports=javafx.controls/com.sun.javafx.scene.control=org.jabref",
-        "--add-opens=javafx.graphics/javafx.scene=org.jabref",
-        "--add-opens=javafx.controls/javafx.scene.control=org.jabref",
-        "--add-opens=javafx.controls/com.sun.javafx.scene.control=org.jabref",
-
-        "--add-opens=javafx.base/javafx.collections=org.jabref",
-        "--add-opens=javafx.base/javafx.collections.transformation=org.jabref",
-
-        "--enable-native-access=ai.djl.tokenizers,ai.djl.pytorch_engine,com.sun.jna,javafx.graphics,javafx.media,javafx.web,org.apache.lucene.core"
+        "-XX:+UnlockExperimentalVMOptions",
+        "-XX:+UseCompactObjectHeaders",
+        "-XX:+UseZGC",
+        "-XX:+ZUncommit",
+        "-XX:+UseStringDeduplication"
     )
 }
-
-/*
-jacoco {
-    toolVersion = "0.8.13"
-}
-*/
 
 tasks.named<JavaExec>("run") {
     // "assert" statements in the code should activated when running using gradle
     enableAssertions = true
-
-    doFirst {
-        // Clear the default JVM arguments to avoid warnings
-        // application.applicationDefaultJvmArgs = emptyList()
-        application.applicationDefaultJvmArgs =
-            listOf(
-                "--enable-native-access=ai.djl.tokenizers,ai.djl.pytorch_engine,com.sun.jna,javafx.graphics,javafx.media,javafx.web,org.apache.lucene.core"
-            )
-    }
 }
 
-tasks.named("jpackage") {
-    dependsOn("deleteInstallerTemp")
-}
-
-tasks.named("jlinkZip") {
-    dependsOn("jpackage")
-}
-
-tasks.register<Delete>("deleteInstallerTemp") {
-    delete(layout.buildDirectory.dir("installer"))
-}
-
-var jpackageResourceDir: String  = ""
-
-if (OperatingSystem.current().isWindows) {
-    jpackageResourceDir = "${layout.buildDirectory.get().asFile}/jpackage-resource-dir"
-
-    tasks.register<Copy>("copyJPackageResourceDir") {
-        from("${projectDir}/buildres/windows") {
-            include("JabRef-post-image.wsf")
-            filter<ReplaceTokens>(mapOf("jabRefRoot" to "$projectDir".replace('\\', '/')))
-        }
-        from("${projectDir}/buildres/windows") {
-            exclude("JabRef-post-image.wsf")
-        }
-        into(jpackageResourceDir)
-    }
-
-    tasks.named("jpackage").configure {
-        dependsOn("copyJPackageResourceDir")
-    }
-} else if (OperatingSystem.current().isLinux) {
-    jpackageResourceDir = "${projectDir}/buildres/linux"
-} else if (OperatingSystem.current().isMacOsX) {
-    jpackageResourceDir = "${projectDir}/buildres/mac"
-}
-
-jlink {
-    // https://github.com/beryx/badass-jlink-plugin/issues/61#issuecomment-504640018
-    addExtraDependencies(
-        "javafx"
-    )
-
-    // We keep debug statements - otherwise "--strip-debug" would be included
-    addOptions(
-        "--compress",
-        "zip-6",
-        "--no-header-files",
-        "--no-man-pages",
-        "--bind-services",
-        "--add-modules", "jdk.incubator.vector"
-    )
-
-    launcher {
-        name = "JabRef"
-        jvmArgs = listOf(
-            // Fix for https://github.com/JabRef/jabref/issues/11188
-            "--add-exports=javafx.base/com.sun.javafx.event=org.jabref.merged.module",
-            "--add-exports=javafx.controls/com.sun.javafx.scene.control=org.jabref.merged.module",
-
-            // Fix for https://github.com/JabRef/jabref/issues/11198
-            "--add-opens=javafx.graphics/javafx.scene=org.jabref.merged.module",
-            "--add-opens=javafx.controls/javafx.scene.control=org.jabref.merged.module",
-            "--add-opens=javafx.controls/com.sun.javafx.scene.control=org.jabref.merged.module",
-            // fix for https://github.com/JabRef/jabref/issues/11426
-            "--add-opens=javafx.controls/javafx.scene.control.skin=org.jabref.merged.module",
-
-            "--enable-native-access=org.jabref.merged.module"
+// Below should eventually replace the 'jlink {}' and doLast-copy configurations above
+javaModulePackaging {
+    applicationName = "JabRef"
+    jpackageResources = layout.projectDirectory.dir("buildres")
+    verbose = true
+    addModules.add("jdk.incubator.vector")
+    targetsWithOs("windows") {
+        options.addAll(
+            "--win-upgrade-uuid", "d636b4ee-6f10-451e-bf57-c89656780e36",
+            "--win-dir-chooser",
+            "--win-shortcut",
+            "--win-menu",
+            "--win-menu-group", "JabRef",
+            "--license-file", "$projectDir/buildres/LICENSE_with_Privacy.md",
+            "--file-associations", "$projectDir/buildres/windows/bibtexAssociations.properties"
         )
+        targetResources.from(layout.projectDirectory.dir("buildres/windows").asFileTree.matching {
+            include("jabref-firefox.json")
+            include("jabref-chrome.json")
+            include("JabRefHost.bat")
+            include("JabRefHost.ps1")
+        })
     }
-
-    // TODO: Remove as soon as dependencies are fixed (upstream)
-    forceMerge(
-        "controlsfx",
-        "bcprov",
-        "jaxb",
-        "istack",
-        "stax"
-    )
-
-    mergedModule {
-        requires("com.google.gson")
-        requires("com.fasterxml.jackson.annotation")
-        requires("com.fasterxml.jackson.databind")
-        requires("com.fasterxml.jackson.core")
-        requires("com.fasterxml.jackson.datatype.jdk8")
-        requires("jakarta.xml.bind")
-        requires("java.compiler")
-        requires("java.datatransfer")
-        requires("java.desktop")
-        requires("java.logging")
-        requires("java.management")
-        requires("java.naming")
-        requires("java.net.http")
-        requires("java.rmi")
-        requires("java.scripting")
-        requires("java.security.jgss")
-        requires("java.security.sasl")
-        requires("java.sql")
-        requires("java.sql.rowset")
-        requires("java.transaction.xa")
-        requires("java.xml")
-        requires("javafx.base")
-        requires("javafx.controls")
-        requires("javafx.fxml")
-        requires("javafx.graphics")
-        requires("javafx.media")
-        requires("javafx.swing")
-        requires("jdk.security.jgss")
-        requires("jdk.unsupported")
-        requires("jdk.unsupported.desktop")
-        requires("jdk.xml.dom")
-        requires("org.apache.commons.lang3")
-        requires("org.apache.commons.logging")
-        requires("org.apache.commons.text")
-        requires("org.apache.commons.codec")
-        requires("org.apache.commons.io")
-        requires("org.apache.commons.compress")
-        requires("org.freedesktop.dbus")
-        requires("org.jsoup")
-        requires("org.slf4j")
-        requires("org.tukaani.xz")
-
-        uses("ai.djl.engine.EngineProvider")
-        uses("ai.djl.repository.RepositoryFactory")
-        uses("ai.djl.repository.zoo.ZooProvider")
-        uses("dev.langchain4j.spi.prompt.PromptTemplateFactory")
-        uses("kong.unirest.core.json.JsonEngine")
-        uses("org.eclipse.jgit.lib.Signer")
-        uses("org.eclipse.jgit.transport.SshSessionFactory")
-        uses("org.postgresql.shaded.com.ongres.stringprep.Profile")
-
-        provides("java.sql.Driver").with(
-            "org.postgresql.Driver")
-        provides("java.security.Provider").with(
-            "org.bouncycastle.jce.provider.BouncyCastleProvider",
-            "org.bouncycastle.pqc.jcajce.provider.BouncyCastlePQCProvider")
-        provides("kong.unirest.core.json.JsonEngine").with(
-            "kong.unirest.modules.gson.GsonEngine")
-        provides("ai.djl.repository.zoo.ZooProvider").with(
-            "ai.djl.engine.rust.zoo.RsZooProvider",
-            "ai.djl.huggingface.zoo.HfZooProvider",
-            "ai.djl.pytorch.zoo.PtZooProvider",
-            "ai.djl.repository.zoo.DefaultZooProvider")
-        provides("ai.djl.engine.EngineProvider").with(
-            "ai.djl.engine.rust.RsEngineProvider",
-            "ai.djl.pytorch.engine.PtEngineProvider")
+    targetsWithOs("linux") {
+        options.addAll(
+            "--linux-menu-group", "Office;",
+            "--linux-rpm-license-type", "MIT",
+            "--description", "JabRef is an open source bibliography reference manager. Simplifies reference management and literature organization for academic researchers by leveraging BibTeX, native file format for LaTeX.",
+            "--icon", "$projectDir/src/main/resources/icons/JabRef-linux-icon-64.png",
+            "--linux-shortcut",
+            "--file-associations", "$projectDir/buildres/linux/bibtexAssociations.properties"
+        )
+        targetResources.from(layout.projectDirectory.dir("buildres/linux").asFileTree.matching {
+            include("native-messaging-host/**")
+            include("jabrefHost.py")
+        })
     }
-
-    // This tasks reads resources from src/main/resourcesPackage/$OS
-    jpackage {
-        outputDir =
-            "distribution"
-
-        if (OperatingSystem.current().isWindows) {
-            // This requires WiX to be installed: https://github.com/wixtoolset/wix3/releases
-            installerType =  "msi"
-
-            imageOptions.addAll(
-                listOf(
-                    "--icon", "${projectDir}/src/main/resources/icons/jabref.ico"
-                )
-            )
-
-            installerOptions.addAll(
-                listOf(
-                    "--vendor", "JabRef",
-                    "--app-version", "$version",
-                    "--verbose",
-                    "--win-upgrade-uuid", "d636b4ee-6f10-451e-bf57-c89656780e36",
-                    "--win-dir-chooser",
-                    "--win-shortcut",
-                    "--win-menu",
-                    "--win-menu-group", "JabRef",
-                    "--temp", "${layout.buildDirectory.get()}/installer",
-                    "--resource-dir", jpackageResourceDir,
-                    "--license-file", "$projectDir/buildres/LICENSE_with_Privacy.md",
-                    "--file-associations", "$projectDir/buildres/windows/bibtexAssociations.properties"
-                )
-            )
-        } else if (OperatingSystem.current().isLinux) {
-            imageOptions.addAll(
-                listOf(
-                    "--icon", "$projectDir/src/main/resources/icons/JabRef-linux-icon-64.png",
-                    "--app-version", "$version"
-                )
-            )
-
-            installerOptions.addAll(
-                listOf(
-                    "--verbose",
-                    "--vendor",  "JabRef",
-                    "--app-version", "$version",
-                    // "--temp", "$buildDir/installer",
-                    "--resource-dir", jpackageResourceDir,
-                    "--linux-menu-group", "Office;",
-                    "--linux-rpm-license-type", "MIT",
-                    // "--license-file", "$projectDir/LICENSE.md",
-                    "--description", "JabRef is an open source bibliography reference manager. Simplifies reference management and literature organization for academic researchers by leveraging BibTeX, native file format for LaTeX.",
-                    "--linux-shortcut",
-                    "--file-associations", "$projectDir/buildres/linux/bibtexAssociations.properties"
-                )
-            )
-        } else if (OperatingSystem.current().isMacOsX) {
-            imageOptions.addAll(
-                listOf(
-                    "--icon",  "$projectDir/src/main/resources/icons/jabref.icns",
-                    "--resource-dir", "$projectDir/buildres/mac"
-                )
-            )
-
-            skipInstaller = true
-
-            installerOptions.addAll(
-                listOf(
-                    "--verbose",
-                    "--vendor", "JabRef",
-                    "--mac-package-identifier", "JabRef",
-                    "--mac-package-name", "JabRef",
-                    "--app-version", "$version",
-                    "--file-associations", "$projectDir/buildres/mac/bibtexAssociations.properties",
-                    "--resource-dir", jpackageResourceDir
-                )
+    targetsWithOs("macos") {
+        options.addAll(
+            "--icon", "$projectDir/buildres/macos/JabRef.icns",
+            "--mac-package-identifier", "JabRef",
+            "--mac-package-name", "JabRef",
+            "--file-associations", "$projectDir/buildres/macos/bibtexAssociations.properties",
+        )
+        if (providers.environmentVariable("OSXCERT").orNull?.isNotBlank() ?: false) {
+            options.addAll(
+                "--mac-sign",
+                "--mac-signing-key-user-name", "JabRef e.V. (6792V39SK3)",
+                "--mac-package-signing-prefix", "org.jabref.",
             )
         }
-    }
-}
-
-if (OperatingSystem.current().isWindows) {
-    tasks.named("jpackageImage").configure {
-        doLast {
-            copy {
-                from(file("$projectDir/buildres/windows")) {
-                    include(
-                        "jabref-firefox.json",
-                        "jabref-chrome.json",
-                        "JabRefHost.bat",
-                        "JabRefHost.ps1"
-                    )
-                }
-                into(file("${layout.buildDirectory.get()}/distribution/JabRef"))
-            }
-        }
-    }
-} else if (OperatingSystem.current().isLinux) {
-    tasks.named("jpackageImage").configure {
-        doLast {
-            copy {
-                from(file("$projectDir/buildres/linux")) {
-                    include("native-messaging-host/**", "jabrefHost.py")
-                }
-                into(file("${layout.buildDirectory.get()}/distribution/JabRef/lib"))
-            }
-        }
-    }
-} else if (OperatingSystem.current().isMacOsX) {
-    tasks.named("jpackageImage").configure {
-        doLast {
-            copy {
-                from(file("$projectDir/buildres/mac")) {
-                    include("native-messaging-host/**", "jabrefHost.py")
-                }
-                into(file("${layout.buildDirectory.get()}/distribution/JabRef.app/Contents/Resources"))
-            }
-        }
+        targetResources.from(layout.projectDirectory.dir("buildres/macos").asFileTree.matching {
+            include("Resources/**")
+        })
     }
 }
 
 javaModuleTesting.whitebox(testing.suites["test"]) {
     requires.add("org.jabref.testsupport")
 
+    // Not sure why there is no dependency for jabgui normal running for this dependency
+    // requires.add("javafx.graphics")
+
+    requires.add("com.github.javaparser.core")
     requires.add("org.junit.jupiter.api")
     requires.add("org.junit.jupiter.params")
     requires.add("org.mockito")
+
+    requires.add("org.testfx")
+    requires.add("org.testfx.junit5")
+
     requires.add("wiremock")
     requires.add("wiremock.slf4j.spi.shim")
+
+    requires.add("com.tngtech.archunit")
+    requires.add("com.tngtech.archunit.junit5.api")
 }
 
 tasks.test {
     jvmArgs = listOf(
+        "-javaagent:${mockitoAgent.asPath}",
+
+        // Source: https://github.com/TestFX/TestFX/issues/638#issuecomment-433744765
         "--add-opens", "javafx.graphics/com.sun.javafx.application=org.testfx",
-        "--add-reads", "org.mockito=java.prefs",
-        "--add-reads", "org.jabref=wiremock"
+
+        "--add-opens", "java.base/jdk.internal.ref=org.apache.pdfbox.io",
+        "--add-opens", "java.base/java.nio=org.apache.pdfbox.io",
+        "--enable-native-access=javafx.graphics,javafx.web,com.sun.jna"
+
+        // "--add-reads", "org.mockito=java.prefs",
+        // "--add-reads", "org.jabref=wiremock"
     )
 }
