@@ -1,7 +1,8 @@
 import com.vanniktech.maven.publish.JavaLibrary
 import com.vanniktech.maven.publish.JavadocJar
-import com.vanniktech.maven.publish.SonatypeHost
 import dev.jbang.gradle.tasks.JBangTask
+import net.ltgt.gradle.errorprone.errorprone
+import net.ltgt.gradle.nullaway.nullaway
 import org.gradle.api.tasks.testing.logging.TestExceptionFormat
 import java.net.URI
 import java.util.*
@@ -11,15 +12,18 @@ plugins {
     id("java-library")
 
     id("antlr")
-    id("com.github.bjornvester.xjc") version "1.8.1"
 
     id("me.champeau.jmh") version "0.7.3"
 
-    id("com.vanniktech.maven.publish") version "0.32.0"
+    id("com.vanniktech.maven.publish") version "0.34.0"
 
     // id("dev.jbang") version "0.2.0"
     // Workaround for https://github.com/jbangdev/jbang-gradle-plugin/issues/7
-    id("com.github.koppor.jbang-gradle-plugin") version "fix-7-SNAPSHOT"
+    // Build state at https://jitpack.io/#koppor/jbang-gradle-plugin/fix-7-SNAPSHOT
+    id("com.github.koppor.jbang-gradle-plugin") version "8a85836163"
+
+    id("net.ltgt.errorprone") version "4.3.0"
+    id("net.ltgt.nullaway") version "2.3.0"
 }
 
 var version: String = project.findProperty("projVersion")?.toString() ?: "0.1.0"
@@ -43,13 +47,14 @@ tasks.withType<com.autonomousapps.tasks.CodeSourceExploderTask>().configureEach 
     dependsOn(tasks.withType<AntlrTask>())
 }
 
+// See https://javadoc.io/doc/org.mockito/mockito-core/latest/org.mockito/org/mockito/Mockito.html#0.3
+val mockitoAgent = configurations.create("mockitoAgent")
+
 dependencies {
+    // api(platform(project(":versions")))
+
     implementation("org.openjfx:javafx-base")
 
-    // Required by afterburner.fx
-    implementation("org.openjfx:javafx-controls")
-    implementation("org.openjfx:javafx-fxml")
-    implementation("org.openjfx:javafx-graphics")
     implementation("com.ibm.icu:icu4j")
 
     // Fix "error: module not found: javafx.controls" during compilation
@@ -59,6 +64,9 @@ dependencies {
     // exclusions are not supported
 
     implementation("org.jabref:afterburner.fx")
+    // Required by afterburner.fx
+    implementation("org.openjfx:javafx-fxml")
+
     implementation("org.jabref:easybind")
 
     implementation ("org.apache.pdfbox:pdfbox")
@@ -97,9 +105,8 @@ dependencies {
 
     implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-yaml")
     implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310")
-
-    // required by XJC
-    implementation("jakarta.xml.bind:jakarta.xml.bind-api")
+    // TODO: Somwewhere we get a warning: unknown enum constant Id.CLASS reason: class file for com.fasterxml.jackson.annotation.JsonTypeInfo$Id not found
+    // implementation("com.fasterxml.jackson.core:jackson-annotations:2.19.1")
 
     implementation("com.fasterxml:aalto-xml")
 
@@ -153,9 +160,6 @@ dependencies {
     // YAML reading and writing
     implementation("org.yaml:snakeyaml")
 
-    // XJC related
-    implementation("org.glassfish.jaxb:jaxb-runtime")
-
     // region AI
     implementation("dev.langchain4j:langchain4j")
     // Even though we use jvm-openai for LLM connection, we still need this package for tokenization.
@@ -163,6 +167,8 @@ dependencies {
     implementation("dev.langchain4j:langchain4j-mistral-ai")
     implementation("dev.langchain4j:langchain4j-google-ai-gemini")
     implementation("dev.langchain4j:langchain4j-hugging-face")
+    implementation("dev.langchain4j:langchain4j-http-client")
+    implementation("dev.langchain4j:langchain4j-http-client-jdk")
 
     implementation("org.apache.velocity:velocity-engine-core")
     implementation("ai.djl:api")
@@ -200,20 +206,31 @@ dependencies {
     testImplementation("org.junit.platform:junit-platform-launcher")
 
     testImplementation("org.mockito:mockito-core")
+    // TODO: Use versions of versions/build.gradle.kts
+    mockitoAgent("org.mockito:mockito-core:5.20.0") { isTransitive = false }
     testImplementation("net.bytebuddy:byte-buddy")
 
     testImplementation("org.xmlunit:xmlunit-core")
     testImplementation("org.xmlunit:xmlunit-matchers")
-    testRuntimeOnly("com.tngtech.archunit:archunit-junit5-engine")
+    testImplementation("org.junit.jupiter:junit-jupiter-api")
+
+    testImplementation("com.tngtech.archunit:archunit")
     testImplementation("com.tngtech.archunit:archunit-junit5-api")
+    testRuntimeOnly("com.tngtech.archunit:archunit-junit5-engine")
 
-    testImplementation("org.hamcrest:hamcrest-library")
+    testImplementation("org.hamcrest:hamcrest")
 
-    testImplementation("org.wiremock:wiremock")
+    testImplementation("org.wiremock:wiremock") {
+        exclude(group = "net.sf.jopt-simple", module = "jopt-simple")
+    }
+    testImplementation("org.ow2.asm:asm")
 
     // Required for LocalizationConsistencyTest
     testImplementation("org.testfx:testfx-core")
     testImplementation("org.testfx:testfx-junit5")
+
+    errorprone("com.google.errorprone:error_prone_core")
+    errorprone("com.uber.nullaway:nullaway")
 }
 /*
 jacoco {
@@ -224,13 +241,6 @@ jacoco {
 tasks.generateGrammarSource {
     maxHeapSize = "64m"
     arguments = arguments + listOf("-visitor", "-long-messages")
-}
-
-xjc {
-    xsdDir.set(layout.projectDirectory.dir("src/main/xsd"))
-    xjcVersion.set("4.0.5")
-    defaultPackage.set("org.jabref.logic.importer.fileformat.citavi")
-    options.set(listOf("encoding=UTF-8"))
 }
 
 val abbrvJabRefOrgDir = layout.projectDirectory.dir("src/main/abbrv.jabref.org")
@@ -245,6 +255,7 @@ var taskGenerateJournalListMV = tasks.register<JBangTask>("generateJournalListMV
 
     inputs.dir(abbrvJabRefOrgDir)
     outputs.file(generatedJournalFile)
+    onlyIf {!generatedJournalFile.get().asFile.exists()}
 }
 
 var taskGenerateCitationStyleCatalog = tasks.register<JBangTask>("generateCitationStyleCatalog") {
@@ -253,9 +264,10 @@ var taskGenerateCitationStyleCatalog = tasks.register<JBangTask>("generateCitati
 
     script = rootProject.layout.projectDirectory.file("build-support/src/main/java/CitationStyleCatalogGenerator.java").asFile.absolutePath
 
-
     inputs.dir(layout.projectDirectory.dir("src/main/resources/csl-styles"))
-    outputs.file(layout.buildDirectory.file("generated/resources/citation-style-catalog.json"))
+    val cslCatalogJson = layout.buildDirectory.file("generated/resources/citation-style-catalog.json")
+    outputs.file(cslCatalogJson)
+    onlyIf {!cslCatalogJson.get().asFile.exists()}
 }
 
 var ltwaCsvFile = layout.buildDirectory.file("tmp/ltwa_20210702.csv")
@@ -296,7 +308,9 @@ var taskGenerateLtwaListMV = tasks.register<JBangTask>("generateLtwaListMV") {
     script = rootProject.layout.projectDirectory.file("build-support/src/main/java/LtwaListMvGenerator.java").asFile.absolutePath
 
     inputs.file(ltwaCsvFile)
-    outputs.file(layout.buildDirectory.file("generated/resources/journals/ltwa-list.mv"))
+    val ltwaListMv = layout.buildDirectory.file("generated/resources/journals/ltwa-list.mv");
+    outputs.file(ltwaListMv)
+    onlyIf {!ltwaListMv.get().asFile.exists()}
 }
 
 // Adds ltwa, journal-list.mv, and citation-style-catalog.json to the resources directory
@@ -345,6 +359,7 @@ val ieeeAPIKey = providers.environmentVariable("IEEEAPIKey").orElse("")
 val scienceDirectApiKey = providers.environmentVariable("SCIENCEDIRECTAPIKEY").orElse("")
 val biodiversityHeritageApiKey = providers.environmentVariable("BiodiversityHeritageApiKey").orElse("")
 val semanticScholarApiKey = providers.environmentVariable("SemanticScholarApiKey").orElse("")
+val medlineApiKey = providers.environmentVariable("MedlineApiKey").orElse("")
 
 tasks.named<ProcessResources>("processResources") {
     dependsOn(extractMaintainers)
@@ -363,6 +378,7 @@ tasks.named<ProcessResources>("processResources") {
     inputs.property("scienceDirectApiKey", scienceDirectApiKey)
     inputs.property("biodiversityHeritageApiKey", biodiversityHeritageApiKey)
     inputs.property("semanticScholarApiKey", semanticScholarApiKey)
+    inputs.property("medlineApiKey", medlineApiKey)
 
     filesMatching("build.properties") {
         expand(
@@ -376,7 +392,8 @@ tasks.named<ProcessResources>("processResources") {
                 "ieeeAPIKey" to inputs.properties["ieeeAPIKey"],
                 "scienceDirectApiKey" to inputs.properties["scienceDirectApiKey"],
                 "biodiversityHeritageApiKey" to inputs.properties["biodiversityHeritageApiKey"],
-                "semanticScholarApiKey" to inputs.properties["semanticScholarApiKey"]
+                "semanticScholarApiKey" to inputs.properties["semanticScholarApiKey"],
+                "medlineApiKey" to inputs.properties["medlineApiKey"]
             )
         )
     }
@@ -398,6 +415,16 @@ tasks.withType<JavaCompile>().configureEach {
 
     // Hint from https://docs.gradle.org/current/userguide/performance.html#run_the_compiler_as_a_separate_process
     options.isFork = true
+
+    options.errorprone {
+        disableAllChecks.set(true)
+        enable("NullAway")
+    }
+
+    options.errorprone.nullaway {
+        warn()
+        annotatedPackages.add("org.jabref")
+    }
 }
 
 tasks.javadoc {
@@ -412,6 +439,12 @@ tasks.test {
     useJUnitPlatform {
         excludeTags("DatabaseTest", "FetcherTest")
     }
+    jvmArgs = listOf(
+        "-javaagent:${mockitoAgent.asPath}",
+        "--add-opens", "java.base/jdk.internal.ref=org.apache.pdfbox.io",
+        "--add-opens", "java.base/java.nio=org.apache.pdfbox.io",
+        "--enable-native-access=com.sun.jna,javafx.graphics,org.apache.lucene.core"
+    )
 }
 
 jmh {
@@ -421,25 +454,30 @@ jmh {
     zip64  = true
 }
 
+val testSourceSet = sourceSets["test"]
+
 tasks.register<Test>("fetcherTest") {
+    group = LifecycleBasePlugin.VERIFICATION_GROUP
+    testClassesDirs = testSourceSet.output.classesDirs
+    classpath = testSourceSet.runtimeClasspath
     useJUnitPlatform {
         includeTags("FetcherTest")
     }
-
     maxParallelForks = 1
 }
 
 tasks.register<Test>("databaseTest") {
+    group = LifecycleBasePlugin.VERIFICATION_GROUP
+    testClassesDirs = testSourceSet.output.classesDirs
+    classpath = testSourceSet.runtimeClasspath
     useJUnitPlatform {
         includeTags("DatabaseTest")
     }
-
     testLogging {
         // set options for log level LIFECYCLE
         events("FAILED")
         exceptionFormat = TestExceptionFormat.FULL
     }
-
     maxParallelForks = 1
 }
 
@@ -486,8 +524,7 @@ mavenPublishing {
     sourcesJar = true,
   ))
 
-  publishToMavenCentral(SonatypeHost.CENTRAL_PORTAL)
-
+  publishToMavenCentral()
   signAllPublications()
 
   coordinates("org.jabref", "jablib", version)
@@ -529,8 +566,13 @@ tasks.named<Jar>("sourcesJar") {
     )
 }
 
-tasks.withType<GenerateModuleMetadata> {
-    suppressedValidationErrors.add("enforced-platform")
+
+// Include the BOM in the generated POM ("inline" / "inlining")
+// Source: https://github.com/gradle/gradle/issues/10861#issuecomment-3027387345
+publishing.publications.withType<MavenPublication>().configureEach {
+    versionMapping {
+        allVariants { fromResolutionResult() }
+    }
 }
 
 javaModuleTesting.whitebox(testing.suites["test"]) {
@@ -538,11 +580,18 @@ javaModuleTesting.whitebox(testing.suites["test"]) {
     requires.add("org.junit.jupiter.api")
     requires.add("org.junit.jupiter.params")
     requires.add("org.jabref.testsupport")
+    requires.add("org.hamcrest")
     requires.add("org.mockito")
+
+    // Required for LocalizationConsistencyTest
+    requires.add("org.testfx.junit5")
+    // requires.add("org.assertj.core")
+
+    requires.add("org.xmlunit")
+    requires.add("org.xmlunit.matchers")
     requires.add("wiremock")
     requires.add("wiremock.slf4j.spi.shim")
 
-    // --add-reads
-    //reads.add("org.jabref.jablib=io.github.classgraph")
-    //reads.add("org.jabref.jablib=org.jabref.testsupport")
+    requires.add("com.tngtech.archunit")
+    requires.add("com.tngtech.archunit.junit5.api")
 }
